--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,23 @@ Historically, the open source software community rightfully was extremely wary o
 	</tr>
 
 	<tr>
+		<td class="col_year">   2021</td>
+		<td class="col_work">   <a href="https://carrv.github.io/2021/papers/CARRV2021_paper_49_Thomas.pdf">ERTOS</a></td>
+		<td class="col_venue">  CARRV</td>
+		<td class="col_domain"> <span class="badge" style="background-color: var(--bs-orange);">RISC-V</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Runs an instance of FreeRTOS as an enclave in the <a href="#Keystone">Keystone</a> framework. Machine mode timer interrupts are forwarded to the FreeRTOS enclave. Implements synchronous message passing and asynchronous message passing over shared memory (with some overhead due to the time to register with the PMP).</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-question-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-question-lg"></i></td>
+	</tr>
+
+	<tr>
 		<td class="col_year">   2022</td>
 		<td class="col_work">   <a href="https://www.usenix.org/conference/usenixsecurity22/presentation/aliaj">GAROTA</a></td>
 		<td class="col_venue">  Usenix Security</td>
