--- a/index.html
+++ b/index.html
@@ -902,6 +902,22 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_legacy"> <span class="badge text-bg-info">Partial</span></td>
 	</tr>
 
+	<tr>
+		<td class="col_year">   2014</td>
+		<td class="col_work">   <a href="https://ieeexplore.ieee.org/document/7011388">Iso-X</a></td>
+		<td class="col_venue">  MICRO</td>
+		<td class="col_domain"> <span class="badge text-bg-primary">Hardware</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Segment</span></td>
+		<td class="col_ideas">  Proposes a hardware architecture and ISA extension using OpenRISC for enclaves. New instructions allow processes to create enclave compartments (region of virtual memory), to add and remove pages from them, <em>etc.</em> Contrary to SGX, the number of pages devoted to enclaves is not limited to the size of a page cache; additionally, when compared to SGX 1.0 memory can be dynamically allocated to an Iso-X enclave compartment. Enclaves can be interrupted, the hardware will save the registers to the non-accessible compartment metadata pages.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-dash-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
+	</tr>
 
 	<tr>
 		<td class="col_year">   2015</td>
